# knight-rider

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: bitboards.cc  bitboards.hpp  engine.cc  engine.hpp  eval.cc  eval.hpp  main.cc  misc.hpp  move.hpp  movegen.cc  movegen.hpp  movelist.hpp  perft.cc  perft.hpp  position.cc  position.hpp  search.cc  search.hpp  tt.cc  tt.hpp  uci.cc  uci.hpp  zobrist.cc  zobrist.hpp
